# youtube-analytics-project

./: pyproject.toml
src/: channel.py  playlist.py  video.py
