[tool.poetry]
name = "13-2"
version = "0.1.0"
description = ""
authors = ["Jeefo7 <Chivenirg@mail.ru>"]
readme = "README.md"
packages = [{include = "13"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
